--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title> Meu Site </title>
+		<title>  Meu Site  </title>
 	</head>
 	<body>
+		<h1>Meu Site</h1>
 	</body>
 </html>
