adicionando texto Meu site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     			<li><a href="sobre.html">Sobre</a></li>
     			<li><a href="contato.html">Contato</a></li>
 		</ul>
-
+		Meu Site
 
 	</body>
 </html>
