Inserindo novos documentos de fontes e bordas

--- a/ProjetoWeb/ProjetoCSS3/bordas.html
+++ b/ProjetoWeb/ProjetoCSS3/bordas.html
@@ -10,7 +10,7 @@
 				/*
 				border: 15px outset	red;*/
 				border-color: 	red green yellow blue;
-				border-width: 	15px 3px;
+				border-width: 	15px 10px 8px 3px;
 				border-style: 	solid ;
 			}
 
