alterando título da pagina

--- a/ProjetoWeb/ProjetoCSS3/estilos-textos.html
+++ b/ProjetoWeb/ProjetoCSS3/estilos-textos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Estilod de Formatação</title>
+		<title>Estilos de Formatação</title>
 		<meta charset="utf-8">
 
 		<style type="text/css"> /* inserção de internal style = estilo interno. */
