--- a/ProjetoAnaBella/index.html
+++ b/ProjetoAnaBella/index.html
@@ -12,7 +12,7 @@
 			<div>
 				<img src="imagens/capa.png">
 			</div>
-			<div class="link">
+			<div id="menu">
 				<h2>
 				<a href="index.html"> HOME </a> | 
 				<a href="biografia.html"> BIGRAFIA </a> | 
