--- a/ProjetoAnaBella/campanha.html
+++ b/ProjetoAnaBella/campanha.html
@@ -13,35 +13,34 @@
 				<img src="imagens/capa.png">
 			</div>
 			<div id="menu">
-				<h2>
+				
 				<a href="index.html"> HOME </a> | 
 				<a href="biografia.html"> BIGRAFIA </a> | 
 				<a href="campanha.html"> CAMPANHAS PUBLICITÁRIAS </a> | 
 				<a href="contato.html"> CONTATO </a>
-				</h2>
+				
 			</div>
-			<div>
-				<h2 class="titulo">Campanhas</h2>
-			</div>
-			<div>
-				<img src="imagens/foto1.png">
+			<div id="conteudo">
+				<h1 class="titulo">Campanhas</h1>
+			
+				<img src="imagens/foto1.png" class="img-campanha">
 				<p class="texto">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. 
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. 
 				</p>
 
-				<img src="imagens/foto2.png">
+				<img src="imagens/foto2.png" class="img-campanha">
 				<p class="texto">
-					Ut ut bibendum risus, ut elementum dui. Morbi lectus mauris, porta tincidunt ultricies vitae, tempus sit amet odio. Phasellus eget mauris lectus. P
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. 
 				</p>
 
-				<img src="imagens/foto3.png">
+				<img src="imagens/foto3.png" class="img-campanha">
 				<p class="texto">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. 
 				</p>
 			</div>
-			<div>
-				<p class="rodape">
-					Todos os direitos reservados.
+			<div id="rodape">
+				<p>
+					<h4> Todos os direitos reservados</h4>
 				</p>
 			</div>
 
