--- a/ProjetoAnaBella/index.html
+++ b/ProjetoAnaBella/index.html
@@ -13,17 +13,16 @@
 				<img src="imagens/capa.png">
 			</div>
 			<div id="menu">
-				<h2>
+				
 				<a href="index.html"> HOME </a> | 
 				<a href="biografia.html"> BIGRAFIA </a> | 
 				<a href="campanha.html"> CAMPANHAS PUBLICITÁRIAS </a> | 
 				<a href="contato.html"> CONTATO </a>
-				</h2>
+				
 			</div>
-			<div>
-				<h2 class="titulo">Sobre Anna Bella</h2>
-			</div>
-			<div>
+			<div id="conteudo"><!--fim couteúdo-->
+				<h1 class="titulo">Sobre Anna Bella</h1>
+			
 				<p class="texto">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. Cras consectetur non purus non commodo. Sed eu nulla quam. Nunc quam turpis, interdum eu massa a, viverra tincidunt magna. Quisque quis tellus pellentesque, egestas leo non, pellentesque enim. Nunc ac tortor accumsan, volutpat leo at, luctus turpis. Integer sed tellus sed orci consequat mollis. Proin mollis, dolor at finibus mattis, velit lacus tincidunt dolor, id posuere justo libero ac orci.
 				</p>
@@ -35,10 +34,11 @@
 				<p class="texto">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. Cras consectetur non purus non commodo. Sed eu nulla quam. Nunc quam turpis, interdum eu massa a, viverra tincidunt magna. Quisque quis tellus pellentesque, egestas leo non, pellentesque enim. Nunc ac tortor accumsan, volutpat leo at, luctus turpis. Integer sed tellus sed orci consequat mollis. Proin mollis, dolor at finibus mattis, velit lacus tincidunt dolor, id posuere justo libero ac orci.
 				</p>
-			</div>
-			<div>
-				<p class="rodape">
-					Todos os direitos reservados.
+			</div><!--fim couteúdo-->
+
+			<div id="rodape">
+				<p>
+					<h4> Todos os direitos reservados</h4>
 				</p>
 			</div>
 
