--- a/ProjetoAnaBella/biografia.html
+++ b/ProjetoAnaBella/biografia.html
@@ -13,27 +13,38 @@
 				<img src="imagens/capa.png">
 			</div>
 			<div id="menu">
-				<h2>
+				
 				<a href="index.html"> HOME </a> | 
 				<a href="biografia.html"> BIGRAFIA </a> | 
 				<a href="campanha.html"> CAMPANHAS PUBLICITÁRIAS </a> | 
 				<a href="contato.html"> CONTATO </a>
-				</h2>
+				
 			</div>
-			<div>
-				<h2 class="titulo">Biografia</h2>
-			</div>
-			<div>
+			<div id="conteudo">
+				<h1 class="titulo">Biografia</h1>
+
 				<p class="texto">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis felis iaculis, ultrices leo ac, fringilla lorem. Mauris sagittis risus in finibus pharetra. Cras consectetur non purus non commodo. Sed eu nulla quam. Nunc quam turpis, interdum eu massa a, viverra tincidunt magna. Quisque quis tellus pellentesque, egestas leo non, pellentesque enim. Nunc ac tortor accumsan, volutpat leo at, luctus turpis. Integer sed tellus sed orci consequat mollis. Proin mollis, dolor at finibus mattis, velit lacus tincidunt dolor, id posuere justo libero ac orci. Ut ut bibendum risus, ut elementum dui. Morbi lectus mauris, porta tincidunt ultricies vitae, tempus sit amet odio. Phasellus eget mauris lectus. Pellentesque a velit arcu. Integer dapibus pretium sem. Proin neque massa, vehicula in sem non, sollicitudin consequat nunc. Vestibulum lobortis consequat arcu vitae pretium. Sed in tempor lacus. Duis ipsum odio, ornare eleifend ipsum sit amet, rutrum laoreet metus. Donec porta, metus ac egestas consectetur, elit nisl sollicitudin arcu, tempor hendrerit eros mauris egestas nunc.
 				</p>
 			</div>
-			<div>
-				<p class="rodape">
-					Todos os direitos reservados.
+			<div id="rodape">
+				<p>
+					<h4> Todos os direitos reservados</h4>
 				</p>
 			</div>
 
 		</div>
 	</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
