--- a/ProjetoWeb/ProjetoCSS3 Intermediario/posicionamento.html
+++ b/ProjetoWeb/ProjetoCSS3 Intermediario/posicionamento.html
@@ -14,6 +14,7 @@
 				width: 800px;
 				margin: 10px auto;/*propriedade 'auto' faz com que o browser reinderize sempre que a tela for aumentada ou diminuida*/
 				padding: 10px;
+				position: relative;
 			}
 
 			h1 {
@@ -22,6 +23,25 @@
 
 			p {
 				width: 300px;
+				
+			}
+
+			.absolute {
+				border: 1px solid red;
+				background: #F2F2F2;
+				position: absolute;
+				top: 80px;
+				right: 20px;
+			}
+
+
+			.fixed {
+				border: 1px solid red;
+				background: #F2F2F2;
+				position: fixed;
+				bottom: 0px;
+				right: 0px;
+				margin: 0px;
 				
 			}
 
@@ -43,18 +63,42 @@
 		<div id="container">
 			<h1>Posicionamentos</h1>
 			<p>
-				P1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. Vivamus egestas libero elit. Aenean scelerisque metus ut neque pellentesque, vel rutrum magna pellentesque. Mauris hendrerit nisl vitae suscipit faucibus. Quisque imperdiet egestas tempor. Curabitur iaculis mi vel tempus convallis. Nulla commodo, sem nec ullamcorper bibendum, ex tortor rutrum ex, ut cursus dui diam ac mi. Ut mollis felis erat, nec lobortis est placerat a. Etiam eu nulla bibendum, pretium felis ut, porta enim. Sed nibh quam, efficitur sed orci et, m
+				P1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. 
 			</p>
 
-				<p class=" relative">
-				P2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. Vivamus egestas libero elit. Aenean scelerisque metus ut neque pellentesque, vel rutrum magna pellentesque. Mauris hendrerit nisl vitae suscipit faucibus. Quisque imperdiet egestas tempor. Curabitur iaculis mi vel tempus convallis. Nulla commodo, sem nec ullamcorper bibendum, ex tortor rutrum ex, ut cursus dui diam ac mi. Ut mollis felis erat, nec lobortis est placerat a. Etiam eu nulla bibendum, pretium felis ut, porta enim. Sed nibh quam, efficitur sed orci et, m
+			<p class="fixed">
+				P2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. 
 			</p>
-				<p>
-				P3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. Vivamus egestas libero elit. Aenean scelerisque metus ut neque pellentesque, vel rutrum magna pellentesque. Mauris hendrerit nisl vitae suscipit faucibus. Quisque imperdiet egestas tempor. Curabitur iaculis mi vel tempus convallis. Nulla commodo, sem nec ullamcorper bibendum, ex tortor rutrum ex, ut cursus dui diam ac mi. Ut mollis felis erat, nec lobortis est placerat a. Etiam eu nulla bibendum, pretium felis ut, porta enim. Sed nibh quam, efficitur sed orci et, m
+
+			<p>
+				P3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. 
+			</p>
+
+			<p>
+				P3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. 
+			</p>
+
+			<p>
+				P3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. 
+			</p>
+
+			<p>
+				P3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. 
+			</p>
+
+			<p>
+				P3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. 
+			</p>
+
+			<p>
+				P3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. 
+			</p>
+
+			<p>
+				P3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. 
 			</p>
 		</div>	
-		</div>
-		</div>
+		
 
 
 
