posicionamento(Static, relative, absolute e fixed)

--- a/ProjetoWeb/ProjetoCSS3 Intermediario/sobrepondo-elementos.html
+++ b/ProjetoWeb/ProjetoCSS3 Intermediario/sobrepondo-elementos.html
@@ -33,7 +33,7 @@
 				position: absolute;
 				top: 160px;
 				left: 160px;
-				z-index: 0;
+				z-index: 0;/*tambem chamado de contexto de empilhamento*/
 			}
 
 			
