--- a/ProjetoTecBlog/index.html
+++ b/ProjetoTecBlog/index.html
@@ -20,5 +20,27 @@
 				<a href="eletronicos.html">Eletrônicos</a>
 			</div>
 		</div><!--Fim da área-cabecalho-->
+
+		<div id="area-principal">
+
+			<div id="area-postagens">
+				<div class="postagem">
+					<h2>Titulo da postagem</h2>
+					<span>Postado em 20 de Julho de 2022</span>
+					<img width="620" src="imagens/imagem2.jpg">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. Vivamus egestas libero elit. Aenean scelerisque metus ut neque pellentesque, vel rutrum magna pellentesque. Mauris hendrerit nisl vitae suscipit faucibus. Quisque imperdiet egestas tempor. Curabitur iaculis mi vel tempus convallis. Nulla commodo, sem nec ullamcorper bibendum, ex tortor rutrum ex, ut cursus dui diam ac mi. Ut mollis felis erat, nec lobortis est placerat a. Etiam eu nulla bibendum, pretium felis ut, porta enim. Sed nibh quam, efficitur sed orci et, m
+					</p>
+					<a href=""> Leia mais...</a>
+
+				</div><!--// Fechamento postagem-->
+
+
+			</div>
+			<div id="area-lateral">
+				Area lateral
+			</div>
+			<div id="rodape">Todos os direitos reservados</div>
+		</div>
 	</body>
 </html>
