Projeto TecBlog finalizado

--- a/ProjetoTecBlog/index.html
+++ b/ProjetoTecBlog/index.html
@@ -22,11 +22,24 @@
 		</div><!--Fim da área-cabecalho-->
 
 		<div id="area-principal">
-
 			<div id="area-postagens">
+				<!--Abertura da postagem-->
 				<div class="postagem">
-					<h2>Titulo da postagem</h2>
-					<span>Postado em 20 de Julho de 2022</span>
+					<h2>Titulo da postagem 1</h2>
+					<span class="data-postagem">Postado em 20 de Julho de 2022</span>
+					<img width="620" src="imagens/imagem1.jpg">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. Vivamus egestas libero elit. Aenean scelerisque metus ut neque pellentesque, vel rutrum magna pellentesque. Mauris hendrerit nisl vitae suscipit faucibus. Quisque imperdiet egestas tempor. Curabitur iaculis mi vel tempus convallis. Nulla commodo, sem nec ullamcorper bibendum, ex tortor rutrum ex, ut cursus dui diam ac mi. Ut mollis felis erat, nec lobortis est placerat a. Etiam eu nulla bibendum, pretium felis ut, porta enim. Sed nibh quam, efficitur sed orci et, m
+					</p>
+					<a href=""> Leia mais...</a>
+
+				</div><!--// Fechamento postagem-->
+
+
+				<!--Abertura da postagem-->
+				<div class="postagem">
+					<h2>Titulo da postagem 2</h2>
+					<span class="data-postagem">Postado em 10 de Julho de 2022</span>
 					<img width="620" src="imagens/imagem2.jpg">
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in ullamcorper velit. Proin at velit venenatis ipsum placerat volutpat. Vivamus egestas libero elit. Aenean scelerisque metus ut neque pellentesque, vel rutrum magna pellentesque. Mauris hendrerit nisl vitae suscipit faucibus. Quisque imperdiet egestas tempor. Curabitur iaculis mi vel tempus convallis. Nulla commodo, sem nec ullamcorper bibendum, ex tortor rutrum ex, ut cursus dui diam ac mi. Ut mollis felis erat, nec lobortis est placerat a. Etiam eu nulla bibendum, pretium felis ut, porta enim. Sed nibh quam, efficitur sed orci et, m
@@ -38,7 +51,38 @@
 
 			</div>
 			<div id="area-lateral">
-				Area lateral
+				
+				<div class="conteudo-lateral">
+					<h3>Postagens recentes</h3>
+					<div class="postagem-lateral">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						</p>
+						<a href="">Leia Mais</a>
+					</div>
+
+					<div class="postagem-lateral" style="border-bottom: none;">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						</p>
+						<a href="">Leia Mais</a>
+					</div>
+
+
+				</div>
+			</div>
+
+			<div id="area-lateral">
+				
+				<div class="conteudo-lateral">
+					<h3>Categorias</h3>
+					<a href="">Jogos</a><br>
+					<a href="">Celulares</a><br>
+					<a href="">Informática</a><br>
+					<a href="">Eletrônicos</a><br>
+					<a href="">Jogos</a><br>
+
+				</div>
 			</div>
 			<div id="rodape">Todos os direitos reservados</div>
 		</div>
