Barra de navegaçã horizontal com abas e marcação FINALIZADO

--- a/ProjetoWeb/ProjetoCSS3 Intermediario-Avancado/Barra de navegação com abas/index.html
+++ b/ProjetoWeb/ProjetoCSS3 Intermediario-Avancado/Barra de navegação com abas/index.html
@@ -8,11 +8,11 @@
 		</head>
 
 			
-		<body id="home"> <!--link home ficará marcados como aberto-->
+		<body id="home"> <!--link ficará marcados como aberto-->
 
 			<h2>Home</h2>
 			<ul>
-				<li id="atual"> <!--link home ficará marcados como aberto-->
+				<li id="atual"> <!--link ficará marcados como aberto-->
 					<a href="index.html">Home</a> 
 				</li>
 				<li> 
