--- a/ProjetoWeb/ProjetoCSS3 Intermediario-Avancado/Barra de navegação com abas/servicos.html
+++ b/ProjetoWeb/ProjetoCSS3 Intermediario-Avancado/Barra de navegação com abas/servicos.html
@@ -8,17 +8,17 @@
 		</head>
 
 			
-		<body id="home"> <!--link home ficará marcados como aberto-->
+		<body id="home"> <!--link ficará marcados como aberto-->
 
 			<h2>Home</h2>
 			<ul>
-				<li> <!--link home ficará marcados como aberto-->
+				<li>
 					<a href="index.html">Home</a> 
 				</li>
 				<li> 
 					<a href="sobre.html">Sobre</a> 
 				</li>
-				<li id="atual"> 
+				<li id="atual">  <!--link ficará marcados como aberto-->
 					<a href="servicos.html">Serviços</a> 
 				</li>
 				<li>
