--- a/ProjetoWeb/ProjetoCSS3 Intermediario-Avancado/Barra de navegação com abas/sobre.html
+++ b/ProjetoWeb/ProjetoCSS3 Intermediario-Avancado/Barra de navegação com abas/sobre.html
@@ -8,14 +8,14 @@
 		</head>
 
 			
-		<body id="home"> <!--link home ficará marcados como aberto-->
+		<body id="home"> <!--link ficará marcados como aberto-->
 
 			<h2>Home</h2>
 			<ul>
-				<li> <!--link home ficará marcados como aberto-->
+				<li> 
 					<a href="index.html">Home</a> 
 				</li>
-				<li id="atual"> 
+				<li id="atual"> <!--link ficará marcados como aberto-->
 					<a href="sobre.html">Sobre</a> 
 				</li>
 				<li> 
