--- a/ProjetoWeb/ProjetoCSS3 Intermediario-Avancado/Barra de navegação com abas/noticias.html
+++ b/ProjetoWeb/ProjetoCSS3 Intermediario-Avancado/Barra de navegação com abas/noticias.html
@@ -8,11 +8,11 @@
 		</head>
 
 			
-		<body id="home"> <!--link home ficará marcados como aberto-->
+		<body id="home"> <!--link ficará marcados como aberto-->
 
 			<h2>Home</h2>
 			<ul>
-				<li> <!--link home ficará marcados como aberto-->
+				<li>
 					<a href="index.html">Home</a> 
 				</li>
 				<li> 
@@ -21,7 +21,7 @@
 				<li> 
 					<a href="servicos.html">Serviços</a> 
 				</li>
-				<li id="atual">
+				<li id="atual"> <!--link ficará marcados como aberto-->
 					<a href="noticias.html">Notícias</a> 
 				</li>
 				<li> 
