Criando layout de colunas respeitando leitores de tela

--- a/noticias-cidade/index.html
+++ b/noticias-cidade/index.html
@@ -10,9 +10,11 @@
 
 
 	<body class="home">
+		
+		<div id="container"><!--Inicio container-->
 
-		<div id="container">
-			<div id="topo">
+			
+			<div id="topo"><!--Inicio topo-->
 				<h1 class="logo">Notícias cidade</h1>
 				<ul id="navegacao">
 					<li class="primeiro">
@@ -37,8 +39,23 @@
 						<a id="fotos" href="fotos.html">Fotos</a>
 					</li>
 				</ul>
-			</div>
+			</div><!--Fim topo-->
+
+			<div id="conteudo">
+
+				<div id="primario">primario</div>
+				<div id="secundario">secundario</div>
+				<div id="lateral">lateral</div>
+			
+		</div><!--Fim container-->
+
 		</div>
 
+		<dir id="container-rodape" style="clear: both;">
+			<div id="rodape">
+				&copy; Coopyright 200-2019 Notícias cidade.
+			</div>		
+		</dir>
+		
 	</body>
 </html>
