Criando estrutura de layout e estilo de formatação de caixa.

--- a/noticias-cidade/index.html
+++ b/noticias-cidade/index.html
@@ -9,7 +9,7 @@
 	</head>
 
 
-	<body class="home">
+	<body id="tres-colunas" class="home">
 		
 		<div id="container"><!--Inicio container-->
 
@@ -43,9 +43,50 @@
 
 			<div id="conteudo">
 
-				<div id="primario">primario</div>
-				<div id="secundario">secundario</div>
-				<div id="lateral">lateral</div>
+				<div id="primario">
+					<div class="caixa">
+						<h2>Entrevistas</h2>
+						<dir class="caixa-conteudo">
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+						</dir>
+					</div>
+				</div>
+
+				<div id="secundario">
+					<div class="caixa">
+						<h2>Entrevistas</h2>
+						<dir class="caixa-conteudo">
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+						</dir>
+					</div>
+				</div>
+				<!--Inicio lateral-->
+				<div id="lateral">
+					<div class="caixa">
+						<h2>Entrevistas</h2>
+						<dir class="caixa-conteudo">
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+							Conteúdo<br>
+						</dir>
+					</div>
+				</div><!--Fim lateral-->
 			
 		</div><!--Fim container-->
 
