--- a/noticias-cidade/index.html
+++ b/noticias-cidade/index.html
@@ -44,47 +44,71 @@
 			<div id="conteudo">
 
 				<div id="primario">
-					<div class="caixa">
-						<h2>Entrevistas</h2>
-						<dir class="caixa-conteudo">
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-						</dir>
+					<div class="caixa destaque">
+						<h2>Destaque</h2>
+						<div class="caixa-conteudo">
+
+
+							<h3>Nova legislação</h3>
+							<img class="imagem-principal" src="imagens/taxi.jpg" width="100%">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							</p>
+							<a href="">Leia mais...</a>
+
+
+						</div>
 					</div>
 				</div>
 
 				<div id="secundario">
-					<div class="caixa">
-						<h2>Entrevistas</h2>
-						<dir class="caixa-conteudo">
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-						</dir>
+					<div class="caixa entrevista">
+						<h2>Última entrevista</h2>
+						<div class="caixa-conteudo">
+
+
+							<h3>Entrevista com felipe silva</h3>
+							<img class="imagem-principal" src="imagens/doutor.jpg" width="100%">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							</p>
+							<a href="">Leia mais...</a>
+
+
+						</div>
 					</div>
 				</div>
 				<!--Inicio lateral-->
 				<div id="lateral">
 					<div class="caixa">
 						<h2>Entrevistas</h2>
-						<dir class="caixa-conteudo">
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-							Conteúdo<br>
-						</dir>
+						<div class="caixa-conteudo">
+							<ul>
+								<li><a href="">José Almeida</a></li>
+								<li><a href="">Felipe Silva</a></li>
+								<li><a href="">Renato Rodrigues</a></li>
+								<li><a href="">Abelardo Silveira</a></li>
+								<li><a href="">André Carlos</a></li>
+								<li><a href="">Márcio Mello</a></li>
+								<li><a href="">João Pedro</a></li>
+								<li><a href="">Fernando Weiss</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="caixa">
+						<h2>News</h2>
+						<div class="caixa-conteudo">
+							<form>
+								<div>
+									<label for="email">Email:</label>
+									<input type="text" name="email" id="email" placeholder="E-mail">
+								</div>
+								<div>
+									<input class="submit" type="submit" value="Cadastrar">
+								</div>
+							</form>
+						</div>
 					</div>
 				</div><!--Fim lateral-->
 			
