--- a/noticias-cidade/brasil.html
+++ b/noticias-cidade/brasil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Notícias Cidade - Seu site de notícias</title>
+		<title>Brasil</title>
 		<meta charset="utf-8">
 
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
@@ -9,7 +9,7 @@
 	</head>
 
 
-	<body id="tres-colunas" class="home">
+	<body id="duas-colunas" class="brasil">
 		
 		<div id="container"><!--Inicio container-->
 
@@ -52,7 +52,7 @@
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</p>
-							<a href="nova-legislacao.html">Leia mais...</a>
+							<a href="">Leia mais...</a>
 
 
 						</div>
@@ -92,54 +92,6 @@
 
 				</div>
 			</div>
-
-
-				<div id="secundario">
-					<div class="caixa entrevista">
-						<h2>Última entrevista</h2>
-						<div class="caixa-conteudo">
-
-
-							<h3>Entrevista com felipe silva</h3>
-							<img class="imagem-principal" src="imagens/doutor.jpg" width="100%">
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-							</p>
-							<a href="">Leia mais...</a>
-
-
-						</div>
-					</div>
-					<div class="caixa">
-						<h2>Mundo</h2>
-
-							<ul id="lista-noticias">
-								<li>
-									<a href="">
-										<img src="imagens/cidade.jpg" width="80">
-										<h3>Novas tecnologias</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-									</a>
-								</li>
-								<li>
-									<a href="">
-										<img src="imagens/taxi.jpg" width="80">
-										<h3>Novas tecnologias</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-									</a>
-								</li>
-								<li>
-									<a href="">
-										<img src="imagens/tecnologia.jpg" width="80">
-										<h3>Novas tecnologias</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-									</a>
-								</li>
-							</ul>
-
-						</div>
-					</div>
-				</div>
 
 
 				<!--Inicio lateral-->
