--- a/chale-hotel/index.html
+++ b/chale-hotel/index.html
@@ -13,13 +13,19 @@
 			<div id="topo"><!--Inicio do topo-->
 
 				<div id="area-logo">
-					<h1>
+					<h1 class="logo">
 						<a href="">Chalé Hotel</a>
 					</h1>
 				</div>
 
 				<div id="area-menu">
-					Menu
+					<div id="conteudo-menu">
+						<div id="menu-locais">
+							<span class="locais">Rio de Janeiro - São Paulo - Belo Horizonte</span>
+							<a class="reserva" href="">Reservar</a>
+							<div style="clear: both;"></div>
+						</div>
+					</div>
 				</div>
 				
 			</div><!--Fim do topo-->
