--- a/chale-hotel/index.html
+++ b/chale-hotel/index.html
@@ -19,11 +19,23 @@
 				</div>
 
 				<div id="area-menu">
+
 					<div id="conteudo-menu">
 						<div id="menu-locais">
 							<span class="locais">Rio de Janeiro - São Paulo - Belo Horizonte</span>
 							<a class="reserva" href="">Reservar</a>
 							<div style="clear: both;"></div>
+						</div>
+						<div id="menu">
+							<ul id="navegacao">
+								<li><a href="">Home</a></li>
+								<li><a href="">História</a></li>
+								<li><a href="">Imprensa</a></li>
+								<li><a href="">Gastronomia</a></li>
+								<li><a href="">Contato</a></li>
+							</ul>
+
+							<img class="depoimento" src="imagens/depoimento.png">
 						</div>
 					</div>
 				</div>
