--- a/Parallax/index.html
+++ b/Parallax/index.html
@@ -26,11 +26,20 @@
 				color: #111;
 				text-align: center;
 			}
+
+			p {
+				margin-bottom: 15px;
+			}
 			/*Efeito parallax
 			****************/
-			.caixa1, .caixa2 {
-				border: 1px solid red;
-				height: 100%
+			.caixa1, .caixa2, .caixa3, .caixa4, .caixa5, .caixa6 {
+				position: relative;
+				height: 100%;
+				opacity: 0.7;
+				background-repeat: no-repeat;
+				background-size: cover;
+				background-position: center;
+				background-attachment: fixed;
 			}
 
 			.caixa1 {
@@ -41,6 +50,39 @@
 				background-image: url(imagens/imagem2.jpg);
 			}
 
+			.caixa3 {
+				background-image: url(imagens/imagem3.jpg);
+			}
+
+			.caixa4 {
+				background-image: url(imagens/imagem4.jpg);
+			}
+
+			.caixa5 {
+				background-image: url(imagens/imagem5.jpg);
+			}
+
+			.caixa6 {
+				background-image: url(imagens/imagem6.jpg);
+			}
+
+			.conteudo-titulo {
+				position: absolute;
+				left: 0%;
+				top: 45%;
+				width: 100%;
+				text-align: center;
+				text-transform: uppercase;		
+			}
+
+			.conteudo-titulo span.titulo {
+				color: #fff;
+				background-color: #111;
+				padding: 18px;
+				font-size: 25px;
+				letter-spacing: 5px;
+			}
+
 
 
 		</style>
@@ -48,7 +90,9 @@
 	<body>
 
 		<div class="caixa1">
-			Caixa 1
+			<div class="conteudo-titulo">
+				<span class="titulo">Passeio de Balões</span>
+			</div>
 		</div>
 
 		<div class="conteudo">
@@ -56,10 +100,86 @@
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
 			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+			</p>
 		</div>
 
 		<div class="caixa2"> 
-			Caixa 2
+			<div class="conteudo-titulo">
+				<span class="titulo">Pegando a estrada</span>
+		</div>
+
+		<div class="conteudo">
+			<h3>Parallax</h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+			</p>
+		</div>
+		</div>
+
+		<div class="caixa3"> 
+			<div class="conteudo-titulo">
+				<span class="titulo">Pegando Sol</span>
+		</div>
+
+		<div class="conteudo">
+			<h3>Parallax</h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+			</p>
+		</div>
+		</div>
+
+		<div class="caixa4"> 
+			<div class="conteudo-titulo">
+				<span class="titulo">Montanhas</span>		
+		</div>
+
+		<div class="conteudo">
+			<h3>Parallax</h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+			</p>
+		</div>
+		</div>
+
+		<div class="caixa5"> 
+			<div class="conteudo-titulo">
+				<span class="titulo">Oceano</span>
+		</div>
+
+		<div class="conteudo">
+			<h3>Parallax</h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum felis tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vitae dictum odio. Donec at enim ultricies, consequat tortor vel, feugiat odio. Curabitur elementum quis est at rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+			</p>
+		</div>
+		</div>
+
+		<div class="caixa6"> 
+			<div class="conteudo-titulo">
+				<span class="titulo">Praia</span>
+		</div>
+
+		
 		</div>
 
 
